--- a/views/window.html
+++ b/views/window.html
@@ -10,6 +10,8 @@
         <!--
         <iframe id="whatsapp" src="http://web.whatsapp.com/" style="width: 800px; height:680px"></iframe>
         -->
-        <script src="app.js"></script>
+        <script src="../app/app.js"></script>
+        <script src="../app/updater.js"></script>
+        <script src="../app/tracking.js"></script>
     </body>
 </html>
