Support for html5 notifications

--- a/views/window.html
+++ b/views/window.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>WhatsApp for Chrome</title>
-        <script src="google-analytics-bundle.js"></script>
+        <script src="../lib/google-analytics-bundle.js"></script>
     </head>
     <body style="margin: 0px; padding: 0px">
 
@@ -11,6 +11,7 @@
         <iframe id="whatsapp" src="http://web.whatsapp.com/" style="width: 800px; height:680px"></iframe>
         -->
         <script src="../app/app.js"></script>
+        <script src="../app/notifications.js"></script>
         <script src="../app/updater.js"></script>
         <script src="../app/tracking.js"></script>
     </body>
