Add in-app message for when there is a new version available

--- a/views/window.html
+++ b/views/window.html
@@ -5,6 +5,11 @@
         <script src="../lib/google-analytics-bundle.js"></script>
     </head>
     <body style="margin: 0px; padding: 0px">
+        <div id="finishUpdateBar" style="display:none; position: absolute; width: 100%; background-color: #2a948a;padding: 10px; color: white;">
+            There is a new version available!
+            <a style="color:white" href="#" id="finishUpdate">Click here</a>
+            to finish the update
+        </div>
 
         <webview id="whatsapp" src="https://web.whatsapp.com/" style="width: 800px; height:680px" partition="persist:whatsapp-for-chrome"></webview>
         <!--
