Add a notification to prompt the users rate the app

--- a/views/window.html
+++ b/views/window.html
@@ -19,5 +19,6 @@
         <script src="../app/notifications.js"></script>
         <script src="../app/updater.js"></script>
         <script src="../app/tracking.js"></script>
+        <script src="../app/rate.js"></script>
     </body>
 </html>
