More improvements to the blank screen hack

--- a/views/window.html
+++ b/views/window.html
@@ -37,5 +37,6 @@
         <script src="../app/updater.js"></script>
         <script src="../app/tracking.js"></script>
         <script src="../app/rate.js"></script>
+        <script src="../app/blank-screen-fix.js"></script>
     </body>
 </html>
