Changed name to WhatsChrome in all occurences

--- a/views/window.html
+++ b/views/window.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>WhatsApp for Chrome</title>
+        <title>WhatsChrome</title>
         <script src="../lib/google-analytics-bundle.js"></script>
         <style>
             @font-face {
@@ -23,7 +23,7 @@
     </head>
     <body style="margin: 0px; padding: 0px; position:absolute; left: 0px; top: 0px; right: 0px; bottom: 0px;">
         <div id="finishUpdateBar" style="display:none">
-            There is a new version of <b>WhatsApp for Chrome</b> available!
+            There is a new version of <b>WhatsChrome</b> available!
             <a style="color:white" href="#" id="finishUpdate">Click here</a>
             to finish the update
         </div>
