Combined utility functions in utils.js

--- a/views/window.html
+++ b/views/window.html
@@ -32,6 +32,7 @@
         <!--
         <iframe id="whatsapp" src="http://web.whatsapp.com/" style="width: 800px; height:680px"></iframe>
         -->
+        <script src="../app/utils.js"></script>
         <script src="../app/app.js"></script>
         <script src="../app/notifications.js"></script>
         <script src="../app/updater.js"></script>
